// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiscussionReplies renders 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <ThreadedLinesView
    avatarSize={24}
    depth={0}
    marginRight={8}
    reply={
      Object {
        "created_at": "2017-05-23T17:12:04Z",
        "id": "1",
        "message": "<p>1.0</p>",
        "parent_id": null,
        "rating_count": null,
        "rating_sum": null,
        "replies": Array [
          Object {
            "created_at": "2017-05-23T17:12:04Z",
            "id": 2,
            "message": "<p>1.0</p>",
            "parent_id": null,
            "rating_count": null,
            "rating_sum": null,
            "replies": Array [],
            "updated_at": "2017-05-23T17:12:04Z",
            "user_id": "1",
          },
        ],
        "updated_at": "2017-05-23T17:12:04Z",
        "user_id": "1",
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginRight": 8,
        "marginTop": 10,
        "paddingTop": 6,
      }
    }
  >
    <View />
    <Avatar
      avatarURL="http://www.fillmurray.com/100/100"
      height={24}
      key="1"
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "borderRadius": 12,
          "height": 24,
          "marginTop": 12.8,
          "width": 24,
        }
      }
      testID="reply.avatar"
      userName="The Donald"
    />
    <View
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "flex": 1,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "marginTop": 12.8,
        }
      }
    >
      <Text
        accessibilityTraits="none"
        style={
          Object {
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        The Donald
      </Text>
      <Text
        style={
          Object {
            "color": "#73818C",
            "fontSize": 12,
            "marginBottom": 16,
          }
        }
      >
        May 23 at 11:12 AM
      </Text>
      <RichContent
        html="<p>1.0</p>"
        navigator={
          Object {
            "dismiss": [Function],
            "dismissAllModals": [Function],
            "isModal": false,
            "pop": [Function],
            "replace": [Function],
            "show": [Function],
            "traitCollection": [Function],
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginBottom": 8,
              "marginTop": 16,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "flex-start",
            }
          }
        >
          <LinkButton
            onPress={[Function]}
            style={
              Object {
                "alignSelf": "flex-end",
                "paddingBottom": 2,
                "paddingRight": 2,
                "paddingTop": 2,
              }
            }
            testID="discussion.reply-btn"
            textStyle={
              Object {
                "color": "#8B969E",
                "fontSize": 16,
                "fontWeight": "500",
              }
            }
          >
            Reply
          </LinkButton>
          <Text
            accessible={false}
            style={
              Array [
                Object {
                  "alignSelf": "flex-end",
                  "paddingBottom": 2,
                  "paddingRight": 2,
                  "paddingTop": 2,
                },
                Object {
                  "alignSelf": "center",
                  "color": "#C7CDD1",
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "textAlign": "center",
                },
              ]
            }
          >
            |
          </Text>
          <LinkButton
            onPress={[Function]}
            style={
              Object {
                "alignSelf": "flex-end",
                "paddingBottom": 2,
                "paddingRight": 2,
                "paddingTop": 2,
              }
            }
            testID="discussion.edit-btn"
            textStyle={
              Object {
                "color": "#8B969E",
                "fontSize": 16,
                "fontWeight": "500",
              }
            }
          >
            Edit
          </LinkButton>
        </View>
      </View>
      <View />
    </View>
  </View>
</View>
`;

exports[`DiscussionReplies renders without the reply button when the user cant reply 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <ThreadedLinesView
    avatarSize={24}
    depth={0}
    marginRight={8}
    reply={
      Object {
        "created_at": "2017-05-23T17:12:04Z",
        "id": "1",
        "message": "<p>1.0</p>",
        "parent_id": null,
        "rating_count": null,
        "rating_sum": null,
        "replies": Array [
          Object {
            "created_at": "2017-05-23T17:12:04Z",
            "id": 2,
            "message": "<p>1.0</p>",
            "parent_id": null,
            "rating_count": null,
            "rating_sum": null,
            "replies": Array [],
            "updated_at": "2017-05-23T17:12:04Z",
            "user_id": "1",
          },
        ],
        "updated_at": "2017-05-23T17:12:04Z",
        "user_id": "1",
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginRight": 8,
        "marginTop": 10,
        "paddingTop": 6,
      }
    }
  >
    <View />
    <Avatar
      avatarURL="http://www.fillmurray.com/100/100"
      height={24}
      key="1"
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "borderRadius": 12,
          "height": 24,
          "marginTop": 12.8,
          "width": 24,
        }
      }
      testID="reply.avatar"
      userName="The Donald"
    />
    <View
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "flex": 1,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "marginTop": 12.8,
        }
      }
    >
      <Text
        accessibilityTraits="none"
        style={
          Object {
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        The Donald
      </Text>
      <Text
        style={
          Object {
            "color": "#73818C",
            "fontSize": 12,
            "marginBottom": 16,
          }
        }
      >
        May 23 at 11:12 AM
      </Text>
      <RichContent
        html="<p>1.0</p>"
        navigator={
          Object {
            "dismiss": [Function],
            "dismissAllModals": [Function],
            "isModal": false,
            "pop": [Function],
            "replace": [Function],
            "show": [Function],
            "traitCollection": [Function],
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "flex": 1,
              "flexDirection": "row",
              "marginBottom": 8,
              "marginTop": 16,
            },
          ]
        }
      />
      <View />
    </View>
  </View>
</View>
`;
